[metadata]
name = panedr
author = Jonathan Barnoud
author_email = jonathan@barnoud.net
summary = Read and manipulate Gromacs energy files
license = LGPL
description_file =
    README.rst
long_description_content_type = text/x-rst
home_page = https://github.com/MDAnalysis/panedr
python_requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent

[extras]
test =
    six
    pytest
