[metadata]
name = panedr
author = Jonathan Barnoud
author_email = jonathan@barnoud.net
summary = Read and manipulate Gromacs energy files to pandas Dataframes
license = LGPLv2+
license_file = ../LICENSE.txt
description_file =
    ../README.rst
long_description_content_type = text/x-rst
url = https://github.com/MDAnalysis/panedr
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
python_requires = >= 3.6
install_requires =
    pyedr
    pandas
    pbr

[options.extras_require]
test =
    pytest
