[build-system]
requires = [
	"setuptools>=61.2",
	"versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyedr"
description = "Read Gromacs EDR files."
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [{name = "Jonathan Barnoud", email = "jonathan@barnoud.net"}]
maintainers = [{name = "The MDAnalysis developers", email = "mdanalysis@numfocus.org"}]
license = {text = "LGPLv2+"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
urls = {Homepage = "https://github.com/MDAnalysis/panedr"}
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "tqdm",
    "mda-xdrlib",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
]


[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
method = "git" 
match = ["*"]
default-tag = "0.0.0"
